# sgf-data-access-requirements

./: Makefile.am  README.md  configure.ac  env.in
web/: Makefile.am
web/static/css/: udac.css
web/static/js/: data-access-requirements.js
web/www/db/: data-access-requirements.scm.in
web/www/forms/: data-access-requirements.scm
web/www/reports/: data-access-requirements.scm
